fix: move x-cloak directive to app.blade.php for improved modal visibility handling

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,3 @@
 @source "../../storage/framework/views/*.php";
 @source "../**/*.blade.php";
 @source "../**/*.js";
-
-[x-cloak] {
-    display: none !important;
-}
